<resources>
    <string name="app_name">Movies</string>
    <string name="update_user_info">update user</string>
    <string name="dummy_name">My name</string>
    <string name="dummy_mobile">My mobile</string>
    <string name="name_hint">Name hint</string>
    <string name="mobile_hint">Mobile hint</string>
    <string name="menu_library">Library</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="no_movies">No movies added</string>
    <string name="seen_button">seen button</string>
    <string name="add_button">add button</string>
    <string name="poster_image">poster image</string>
    <string name="delete_button">delete button</string>
    <string name="title_activity_movie">MovieActivity</string>

    <string name="rate_placeholder">%s/10</string>
    <string name="add_title">Title</string>
    <string name="add_year">Year</string>
    <string name="add_description">Description</string>
    <string name="add_rate">Rate</string>
    <string name="add_director">Director</string>
    <string name="add_actors">Actors</string>
    <string name="add_genre">Genre</string>
    <string name="save_changes">Save changes</string>
    <string name="search">Search...</string>
    <string name="search_button">Search button</string>
    <string name="add">Add</string>
    <string name="add_type">Type</string>
    <string name="rate">Rate</string>
    <string name="add_country">Country</string>
    <string name="add_type_movie">Type (movie/series)</string>
    <string name="add_production_country">Production country</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="enjoy">Enjoy!</string>
    <string name="have_account">Already have an account?</string>
    <string name="register_your_data">Register your data</string>
    <string name="default_poster_url"><![CDATA[https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRGu_GCGyVAmipBdOyZuZVeDDhYTvMS1kAYkFR6N-AMbP6_T0Mq&usqp=CAU]]></string>
    <string name="poster_url">Poster url</string>
    <string name="add_movie">Add movie</string>
</resources>
